test_programs/compile_failure/type_annotation_needed_on_struct_new/src/main.nr
struct Foo<T> {
}

impl <T> Foo<T> {
    fn new() -> Foo<T> {
        Foo {}
    }
}

fn main() {
    let foo = Foo::new();
}
